# Etherpad

./: .gitignore  APP_STORE_CHECKLIST.md  CONTRIBUTING.md  IOS_DEPLOYMENT_GUIDE.md  IPAD_SPLIT_SCREEN_IMPLEMENTATION.md  NOTICE.md  README.md  settings.gradle.kts
.github/workflows/: apple-build.yml  ios-build-release.yml  macos-build.yml
EtherSurface-Android-v2/: README.md
EtherSurface-iOS/: BUILD.md  README.md  SplitModeController.swift  SplitSynthViewController.swift  SynthPanelViewController.swift  exportOptions.plist
EtherSurface-iOS/EtherSurface/: AppDelegate.swift  EtherSurfaceViewController.swift  Info.plist  SceneDelegate.swift
EtherSurface-iOS/EtherSurface.xcodeproj/: project.pbxproj
EtherSurface-iOS/Etherpad/: Info.plist  SceneDelegate.swift
EtherSurface-iOS/Etherpad.xcodeproj/: project.pbxproj
Etherpad-Android/: README.md  gradle.properties  settings.gradle.kts
Etherpad-Android/app/: build.gradle.kts  proguard-rules.pro
Etherpad-Android/app/src/main/cpp/: CMakeLists.txt  engine.cpp  wav_writer.cpp  wav_writer.h
Etherpad-Android/gradle/: libs.versions.toml
Etherpad-Apple/: BUILD.md  README.md
Etherpad-Apple/AU/: AUParameterAddresses.swift  AUPatchMenuFactory.swift  Etherpad-AU-Bridging-Header.h  EtherpadAUContext.swift  EtherpadAUFactory.swift  EtherpadAUViewController.swift  EtherpadAudioUnit.swift  (+7 more)
Etherpad-iOS/: BUILD.md  README.md  SplitSynthViewController.swift  SynthPanelViewController.swift
app/: build.gradle.kts  proguard-rules.pro
docs/: ARCHITECTURE.md  BUILD.md  CNAME  CSD.md  CSOUND.md  FEATURE_IDEAS.md  MIGRATION.md  _config.yml  etherpad-csd-explained.md  index.md  privacy-policy.md
scripts/: fetch-csound.sh
(+135 files in other folders)
